--- a/7-11.html
+++ b/7-11.html
@@ -295,7 +295,7 @@ Store Number:<br>
               ' "priority": "High", ' +
               ' "title": "[Franchise Alert] Gas Pump Issue", ' +
               ' "event_id": "8125363154448140714", ' +
-              ' "tags": "7-Eleven, slurpee, store", ' +
+              ' "tags": "7-Eleven, Gas Pump, store", ' +
               ' "Customer": "'+ customerName + '" ' +
               ' }, ' +
             ' "description": "[Franchise Alert] Gas Pump Issue" ' +
