--- a/gm.htm
+++ b/gm.htm
@@ -194,19 +194,15 @@ document.getElementsByClassName("tablink")[0].click();
               ' }, ' +
 
               ' { ' +
-              ' "text": "Conference URL (Zoom)", ' +
-              ' "href": "https://pagerduty.zoom.us/j/5080555253", ' +
+              ' "text": "GM Status Dashboard", ' +
+              ' "href": "https://pdt-huggins.pagerduty.com/status-dashboard/gm-service-status", ' +
               ' "type": "link" ' +
               ' }, ' +
 
-            '{' +
-            '  "text": "Conference Dial (Zoom)",  ' +
-            '  "href": "tel:+442036950088,,5080555253#",  ' +
-            '  "type": "link"  ' +
-            '},' +
+            
           '{' +
-            ' "text": "Monitor Status", ' +
-            ' "href": "https://appp.datadoghq.com/monitors#72563?to_ts=1452282540000&group=host%3Aprod-web-xdb09&from_ts=1452281340000", ' +
+            ' "text": "PagerDuty Postmortem", ' +
+            ' "href": "https://pdt-huggins.pagerduty.com/postmortems/15b29bd8-81ce-48dc-8104-31117484df88", ' +
             ' "type": "link" ' +
           '},' +
           '{ ' +
@@ -322,25 +318,20 @@ document.getElementsByClassName("tablink")[0].click();
               ' "contexts"\: [ ' +
               ' {  ' +
                   ' "src": "https://docs.newrelic.com/sites/default/files/styles/inline_660px/public/thumbnails/image/transactions-ui-alert.png?itok=LgLy0yee", ' +
-                  ' "alt": "Snapshot of metric", ' +
+				  ' "alt": "Snapshot of metric", ' +
                   ' "href": "https://s14.postimg.org/knuvhigz5/NRErrors2.png", ' +
                   ' "type": "image" ' +
               ' }, ' +
 
               ' { ' +
-              ' "text": "Conference URL (Zoom)", ' +
-              ' "href": "https://pagerduty.zoom.us/j/5080555253", ' +
+              ' "text": "GM Status Page", ' +
+              ' "href": "https://pdt-huggins.pagerduty.com/status-dashboard/gm-service-status", ' +
               ' "type": "link" ' +
               ' }, ' +
 
-            '{' +
-            '  "text": "Conference Dial (Zoom)",  ' +
-            '  "href": "tel:+442036950088,,5080555253#",  ' +
-            '  "type": "link"  ' +
-            '},' +
           '{' +
-            ' "text": "Monitor Status", ' +
-            ' "href": "https://appp.datadoghq.com/monitors#72563?to_ts=1452282540000&group=host%3Aprod-web-xdb09&from_ts=1452281340000", ' +
+            ' "text": "PagerDuty Postmortem", ' +
+            ' "href": "https://pdt-huggins.pagerduty.com/postmortems/15b29bd8-81ce-48dc-8104-31117484df88", ' +
             ' "type": "link" ' +
           '},' +
           '{ ' +
