--- a/gm.htm
+++ b/gm.htm
@@ -386,7 +386,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error connecting to GM Rewards database.')
+          alert('Error connecting to GM Rewards database. Please call the Support Desk on +1 817-440-3544')
           return false;
 
 
