--- a/apollo.htm
+++ b/apollo.htm
@@ -488,7 +488,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error joining matchmaking server.')
+          alert('Error joining matchmaking server. Please call the Support Desk on +1 817-440-3544')
           return false;
 		  
 		 
