--- a/apollo.htm
+++ b/apollo.htm
@@ -396,8 +396,8 @@ document.getElementsByClassName("tablink")[0].click();
               ' "client_url": "https://rpm.newrelic.com/accounts/1818495/applications/105833762", ' +
               ' "service_key"\: "' + serviceKey + '", ' +
               ' "incident_key"\: "' + dedupKey + '", ' +
-              ' "client"\: "New Relic", ' +
-              ' "vendor"\: "New Relic", ' +
+              ' "client"\: "DataDog", ' +
+              ' "vendor"\: "DataDog", ' +
               ' "event_type"\: "trigger", ' +
               ' "contexts"\: [ ' +
               ' {  ' +
