--- a/apollo.htm
+++ b/apollo.htm
@@ -396,12 +396,12 @@ document.getElementsByClassName("tablink")[0].click();
               ' "client_url": "https://rpm.newrelic.com/accounts/1818495/applications/105833762", ' +
               ' "service_key"\: "' + serviceKey + '", ' +
               ' "incident_key"\: "' + dedupKey + '", ' +
-              ' "client"\: "DataDog", ' +
-              ' "vendor"\: "DataDog", ' +
+              ' "client"\: "Datadog", ' +
+              ' "vendor"\: "Datadog", ' +
               ' "event_type"\: "trigger", ' +
               ' "contexts"\: [ ' +
               ' {  ' +
-                  ' "src": "https://docs.newrelic.com/sites/default/files/styles/inline_660px/public/thumbnails/image/transactions-ui-alert.png?itok=LgLy0yee", ' +
+                  ' "src": "https://app.datadoghq.com/graph/embed?token=646fa8cbd95cbd0ab05ae2f2cd74cebdd57dc256f1fa4610e1272ef1c49c33bc&height=300&width=600&legend=true", ' +
                   ' "alt": "Snapshot of metric", ' +
                   ' "href": "https://s14.postimg.org/knuvhigz5/NRErrors2.png", ' +
                   ' "type": "image" ' +
