--- a/apollo.htm
+++ b/apollo.htm
@@ -400,12 +400,12 @@ document.getElementsByClassName("tablink")[0].click();
               ' "vendor"\: "Datadog", ' +
               ' "event_type"\: "trigger", ' +
               ' "contexts"\: [ ' +
-              ' {  ' +
-                  ' "src": "https://app.datadoghq.com/graph/embed?token=646fa8cbd95cbd0ab05ae2f2cd74cebdd57dc256f1fa4610e1272ef1c49c33bc&height=300&width=600&legend=true", ' +
-                  ' "alt": "Snapshot of metric", ' +
-                  ' "href": "https://s14.postimg.org/knuvhigz5/NRErrors2.png", ' +
-                  ' "type": "image" ' +
-              ' }, ' +
+     //         ' {  ' +
+     //             ' "src": "https://app.datadoghq.com/graph/embed?token=646fa8cbd95cbd0ab05ae2f2cd74cebdd57dc256f1fa4610e1272ef1c49c33bc&height=300&width=600&legend=true", ' +
+     //             ' "alt": "Snapshot of metric", ' +
+     //             ' "href": "https://app.datadoghq.com/graph/embed?token=646fa8cbd95cbd0ab05ae2f2cd74cebdd57dc256f1fa4610e1272ef1c49c33bc&height=300&width=600&legend=true", ' +
+     //             ' "type": "image" ' +
+     //         ' }, ' +
 
 			  ' { ' +
               ' "text": "Status Dashboard", ' +
@@ -488,7 +488,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error joining matchmaking server. Please call the Support Desk on   +1 817-440-3544')
+          alert('Error joining matchmaking server. Please call the Support Desk on +1817-440-3544')
           return false;
 		  
 		 
