--- a/westernunion.htm
+++ b/westernunion.htm
@@ -39,7 +39,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
-      <h3>Log Into your Account</h3>
+      <h3>Log in</h3>
       <div class="w3-row-padding" style="margin:0 -16px;">
         <div class="w3-half">
           <label>Email</label>
@@ -54,7 +54,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
-      <p>Our seasoned personal bankers provide<br> a customized experience to help you manage your personal <br>finances and meet your financial goals. </p>
+      <p>Western Union is here when you need to send money<br> domestically within the U.S. or internationally. <br>Any time, day or night, you name the receiver and the place. </p>
       <p><button class="w3-button w3-blue" onclick="joinErrExample('Login');return(false);">Login</button></p>
     </div>
 
