--- a/westernunion.htm
+++ b/westernunion.htm
@@ -194,7 +194,7 @@ document.getElementsByClassName("tablink")[0].click();
               ' }, ' +
 
               ' { ' +
-              ' "text": "Texas Capital Bank Status Dashboard", ' +
+              ' "text": "Western Union Status Dashboard", ' +
               ' "href": "https://pdt-huggins.pagerduty.com/status-dashboard", ' +
               ' "type": "link" ' +
               ' }, ' +
@@ -212,15 +212,15 @@ document.getElementsByClassName("tablink")[0].click();
           ' } ' +
           ' ], ' +
         ' "details": { ' +
-          ' "body": "[Critical] Unexpected server response detected on the Texas Capital Bank Core Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
+          ' "body": "[Critical] Unexpected server response detected on the Western UnionCore Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
           ' "Order Value": ' + orderValue + ', ' +
           ' "priority": "High", ' +
-          ' "title": "[Critical] Unexpected server response detected on the Texas Capital Bank Core Service, High Error rates", ' +
+          ' "title": "[Critical] Unexpected server response detected on the Western Union Core Service, High Error rates", ' +
           ' "event_id": "8125363154448140714", ' +
           ' "tags": "aws-prod, base, env:prod, host:farnsworth, monitor, pd_az:us-west-2c, production, xdb, xtradb", ' +
           ' "Customer": "'+ customerName + '" ' +
           ' }, ' +
-        ' "description": "[Critical] Texas Capital Bank Core Service Failure: unexpected server response" ' +
+        ' "description": "[Critical] Western Union Core Service Failure: unexpected server response" ' +
         '}'
        // alert('part 1 ' + eventObject);
         console.log(eventObject)
@@ -257,7 +257,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error logging into Texas Capital Bank Core Services.')
+          alert('Error logging into Western Union Core Services.')
           return false;
 
         }
@@ -324,7 +324,7 @@ document.getElementsByClassName("tablink")[0].click();
               ' }, ' +
 
               ' { ' +
-              ' "text": "Texas Capital Bank Status Page", ' +
+              ' "text": "Western Union Status Page", ' +
               ' "href": "https://pdt-huggins.pagerduty.com/status-dashboard", ' +
               ' "type": "link" ' +
               ' }, ' +
@@ -341,15 +341,15 @@ document.getElementsByClassName("tablink")[0].click();
           ' } ' +
           ' ], ' +
         ' "details": { ' +
-          ' "body": "[Major] Unexpected database response detected on the Texas Capital Bank Core Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
+          ' "body": "[Major] Unexpected database response detected on the Western Union Core Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
           ' "Order Value": ' + orderValue + ', ' +
           ' "priority": "High", ' +
-          ' "title": "[Major] Unexpected database response detected on the Texas Capital Bank Core Service, High Error rates", ' +
+          ' "title": "[Major] Unexpected database response detected on the Western Union Core Service, High Error rates", ' +
           ' "event_id": "8125363154448140714", ' +
           ' "tags": "aws-prod, base, env:prod, host:farnsworth, monitor, pd_az:us-west-2c, production, xdb, xtradb", ' +
           ' "Customer": "'+ customerName + '" ' +
           ' }, ' +
-        ' "description": "[Major] Texas Capital Bank Core Service Failure: unexpected database response" ' +
+        ' "description": "[Major] Western Union Core Service Failure: unexpected database response" ' +
         '}'
        // alert('part 1 ' + eventObject);
         console.log(eventObject)
@@ -386,7 +386,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error connecting to Texas Capital Bank Investments database. Please call the Support Desk on +1 817-440-3544')
+          alert('Error connecting to Western Union Investments database. Please call the Support Desk on +1 817-440-3544')
           return false;
 
 
