--- a/westernunion.htm
+++ b/westernunion.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0062)https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm -->
-<html class="gr__w3schools_com"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>WesternUnion Demo Site </title>
+<html class="gr__w3schools_com "><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>WesternUnion Demo Site </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./Online_Travel_Site1_files/w3.css">
@@ -23,16 +23,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Navigation Bar -->
 <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
-  <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-text-red w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>WesternUnion & PagerDuty</b></a>
+  <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-text-black w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>WesternUnion & PagerDuty</b></a>
   <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
 </div>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1700px">
-  <img class="w3-image" src="./images/westernunion.jpg" alt="Texas Capital" width="1700" height="700">
+  <img class="w3-image" src="./images/westernunion.jpg" alt="Western Union" width="1700" height="700">
   <div class="w3-display-middle" style="width:40% height:60%">
-    <div class="w3-bar w3-red">
-      <button class="w3-bar-item w3-button tablink w3-red" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-university w3-margin-right"></i>Send Money</button>
+    <div class="w3-bar w3-black">
+      <button class="w3-bar-item w3-button tablink w3-yellow" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-university w3-margin-right"></i>Send Money</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bar-chart w3-margin-right"></i>Pick up cash</button>
       <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-money w3-margin-right"></i>Pay bills</button>
     </div>
@@ -50,7 +50,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
           <input class="w3-input w3-border" type="text" placeholder="password">
         </div>
       </div>
-      <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Log In</button></p>
+      <p><button class="w3-button w3-yellow" onclick="loginErrExample('Login');return(false);">Log In</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
