--- a/westernunion.htm
+++ b/westernunion.htm
@@ -22,19 +22,19 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 </head><body class="w3-light-grey" data-gr-c-s-loaded="true">
 
 <!-- Navigation Bar -->
-<div class="w3-bar w3-white w3-border-bottom w3-xlarge">
+<!-- <div class="w3-bar w3-white w3-border-bottom w3-xlarge">
   <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-text-black w3-hover-red"><b><i class="fa fa-map-marker w3-margin-right"></i>WesternUnion & PagerDuty</b></a>
   <a href="https://www.w3schools.com/w3css/tryw3css_templates_travel2.htm#" class="w3-bar-item w3-button w3-right w3-hover-red w3-text-grey"><i class="fa fa-search"></i></a>
-</div>
+</div> -->
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1700px">
   <img class="w3-image" src="./images/westernunion.jpg" alt="Western Union" width="1700" height="700">
   <div class="w3-display-middle" style="width:40% height:60%">
     <div class="w3-bar w3-black">
-      <button class="w3-bar-item w3-button tablink w3-yellow" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-university w3-margin-right"></i>Send Money</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bar-chart w3-margin-right"></i>Pick up cash</button>
-      <button class="w3-bar-item w3-button tablink" onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-money w3-margin-right"></i>Pay bills</button>
+      <button class="w3-bar-item w3-button tablink " onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-university w3-margin-right"></i>Send Money</button>
+      <button class="w3-bar-item w3-button tablink " onclick="openLink(event, &#39;Hotel&#39;);"><i class="fa fa-bar-chart w3-margin-right"></i>Pick up cash</button>
+      <button class="w3-bar-item w3-button tablink " onclick="openLink(event, &#39;Car&#39;);"><i class="fa fa-money w3-margin-right"></i>Pay bills</button>
     </div>
 
     <!-- Tabs -->
@@ -386,7 +386,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('Error connecting to Western Union Investments database. Please call the Support Desk on +1 817-440-3544')
+          alert('Error connecting to Western Union Pick Up database. Please call the Support Desk on +1 817-440-3544')
           return false;
 
 
