--- a/westernunion.htm
+++ b/westernunion.htm
@@ -50,12 +50,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
           <input class="w3-input w3-border" type="text" placeholder="password">
         </div>
       </div>
-      <p><button class="w3-button w3-yellow" onclick="loginErrExample('Login');return(false);">Log In</button></p>
+      <p><button class="w3-button w3-red" onclick="loginErrExample('Login');return(false);">Log In</button></p>
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
       <p>Western Union is here when you need to send money<br> domestically within the U.S. or internationally. <br>Any time, day or night, you name the receiver and the place. </p>
-      <p><button class="w3-button w3-blue" onclick="joinErrExample('Login');return(false);">Login</button></p>
+      <p><button class="w3-button w3-red" onclick="joinErrExample('Login');return(false);">Login</button></p>
     </div>
 
     <div id="Car" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
