--- a/apollo.htm
+++ b/apollo.htm
@@ -257,7 +257,7 @@ document.getElementsByClassName("tablink")[0].click();
               ' {  ' +
                   ' "src": "https://docs.newrelic.com/sites/default/files/styles/inline_660px/public/thumbnails/image/transactions-ui-alert.png?itok=LgLy0yee", ' +
                   ' "alt": "Snapshot of metric", ' +
-                  ' "href": "https://darrenhuggins.github.io/images/newrelicerror.jpg", ' +
+                  ' "href": "https://s14.postimg.org/knuvhigz5/NRErrors2.png", ' +
                   ' "type": "image" ' +
               ' }, ' +
 
