--- a/apollo.htm
+++ b/apollo.htm
@@ -340,7 +340,14 @@ document.getElementsByClassName("tablink")[0].click();
             .done(function( msg ) {
              // alert( "Hello: " + msg );
           });
-
+          $.ajax({
+                      method: "GET",
+                      url: "https://event-sender.herokuapp.com/ondemand/5543c7c5-2855-44dd-b632-c61bb9a0ef14",
+                      success:function(resp){}
+                    })
+                      .done(function( msg ) {
+                       // alert( "Hello: " + msg );
+                    });
           alert('Error connecting to Apollo Gaming Core Services.')
           return false;
 
