--- a/ria.htm
+++ b/ria.htm
@@ -29,7 +29,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1900px">
-  <img class="w3-image" src="./images/Ria.jpg" alt="Ria Finacial" width="1900" height="700">
+  <img class="w3-image" src="./images/ria.jpg" alt="Ria Finacial" width="1900" height="700">
   <div class="w3-display-middle" style="width:40% height:60%">
     <div class="w3-bar w3-black">
       <button class="w3-bar-item w3-button tablink " onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-university w3-margin-right"></i>Send Money</button>
