--- a/basspro.html
+++ b/basspro.html
@@ -44,7 +44,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     </div>
 
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
-      <h3>Find the best hotels</h3>
+      <h3>Find the best hotels hotels</h3>
       <p>Book a hotel with us and get the best fares and promotions.</p>
       <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Search Hotels</button></p>
     </div>
