--- a/sc.html
+++ b/sc.html
@@ -36,7 +36,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
     <!-- Tabs -->
     <div id="Flight" class="w3-container w3-white w3-padding-16 myLink" style="display: block;">
-      <h3>Search Products</h3>
+      <h3>Our Products</h3>
             <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Search</button></p>
     </div>
 
