--- a/netjets.html
+++ b/netjets.html
@@ -26,7 +26,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-hide-small" style="max-width:1500px">
-  <img class="w3-image" src="./images/netjets.jpg" alt="Netjets" width="1500" height="877">
+  <img class="w3-image" src="./images/netjets_home.jpg" alt="Netjets" width="1500" height="877">
   <div class="w3-padding w3-display-middle" style="width:30%">
     <div class="w3-bar w3-blue">
       <button class="w3-bar-item w3-button tablink w3-white" onclick="openLink(event, &#39;Flight&#39;);"><i class="fa fa-plane w3-margin-right"></i>Owners</button>
