--- a/netjets.html
+++ b/netjets.html
@@ -43,7 +43,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", Arial, Helvetica, sans-serif}
     <div id="Hotel" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
       <h3>Pilots</h3>
       <p>Scheduled Flights</p>
-      <p><button class="w3-button w3-blue" onclick="loginErrExample('Login');return(false);">Login</button></p>
+      <p><button class="w3-button w3-blue" onclick="joinErrExample('Login');return(false);">Login</button></p>
     </div>
 
     <div id="Car" class="w3-container w3-white w3-padding-16 myLink" style="display: none;">
@@ -269,7 +269,7 @@ document.getElementsByClassName("tablink")[0].click();
         function joinErrExample() {
             //alert('In loginErrExample');
           var serviceKey = getParameterByName('service_key');
-          if (!serviceKey) serviceKey = "8e700ffee976469b84620b98f631d23e"; /*ML service key*/
+          if (!serviceKey) serviceKey = "3f09f33b3ea548d3851d3dcfb15375c2"; /*ML service key*/
          /* var x = document.getElementById("checkoutError");
           x.style.display = "none";
           document.getElementById("checkoutButton").innerHTML = "Working";*/
@@ -336,7 +336,7 @@ document.getElementsByClassName("tablink")[0].click();
           ' } ' +
           ' ], ' +
         ' "details": { ' +
-          ' "body": "[Major] Unexpected database response detected on the Live Core Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
+          ' "body": "[Major] Unexpected database response detected on the NetJets Database Service, High Error rates <br/> Object Reference Not Set and ADO.NET Connection pool exceeded errors detected" , ' +
           ' "Order Value": ' + orderValue + ', ' +
           ' "priority": "High", ' +
           ' "title": "[Major] Unexpected database response detected on the Live Core Service, High Error rates", ' +
@@ -381,7 +381,7 @@ document.getElementsByClassName("tablink")[0].click();
              // alert( "Hello: " + msg );
           });
 
-          alert('db12985 Error - database unavailable. Please call the Support Desk on +1817-440-3544')
+          alert('db12985 Error - database unavailable. Please call the Support Desk on +1256-474-8792')
           return false;
 
 
